<resources>
    <string name="app_name">TAWSEEL Company</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="login">Log in</string>
    <string name="forget_password">Forgotten password?</string>
    <string name="log_in">Log in</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>

    <string name="permission_denied">Please allow all needed permissions to continue</string>
    <string name="permission_call_phone_denied">Please allow phone call permission to continue</string>
    <string name="new_registration">New Registration</string>
    <string name="full_name">Full Name</string>
    <string name="tax_registry_number">Tax Registry Number</string>
    <string name="copy_of_the_commercial_register">Copy of the commercial register</string>
    <string name="e_mail">E-mail</string>
    <string name="repeated_password">Repeated Password</string>
    <string name="i_agree_to_the_terms_of_use_and_communication">I agree to the Terms of Use and Communication</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="receive_your_money_and_deliver_on_us">Receive your money\nand deliver on us</string>
    <string name="order_now">Order now</string>
    <string name="current_orders">Current orders</string>
    <string name="cancel_order">Cancel order</string>
    <string name="show_details">Show details</string>
    <string name="cost">Cost</string>
    <string name="order_number">Order Number #</string>
    <string name="egp">egp</string>
    <string name="completed">Completed</string>
    <string name="no_available_data">No available data</string>

    <string name="address">Address</string>
    <string name="change_password">Change password</string>
    <string name="save_changes">Save changes</string>
    <string name="sign_out">Sign out</string>
    <string name="unauthorized">Unauthorized, Please try to login again</string>
    <string name="authenticating">Authenticating…</string>
    <string name="login_successfully">"Login Successfully"</string>
    <string name="company_successfully_register">Company successfully register, you can login now</string>
    <string name="terms_and_conditions_not_accepted">You should accept terms and conditions</string>
    <string name="password_updated_successfully">Password updated successfully</string>

    <string name="profile_updated_successfully">Profile data updated successfully</string>
    <string name="change_the_password">Change the password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_the_new_password">Confirm the new password</string>
    <string name="phone_or_password_error">the phone number or password is incorrect. please try again</string>
    <string name="please_check_internet_connection">please check your internet connection and try again</string>
    <string name="unknown_error">unknown error occurred. please try again</string>
    <string name="invalid_data_input">The given data was invalid</string>


    <string name="start_order">Start order</string>
    <string name="show_order_details">Show order details</string>
    <string name="finish_order">Finish order</string>
    <string name="not_completed">Not completed</string>

    <string name="all_orders">All Orders</string>
    <string name="new_orders">New orders</string>
    <string name="completed_orders">Completed orders</string>
    <string name="expired_orders">Expired orders</string>
    <string name="refused">Refused</string>
    <string name="in_stock">In Stock</string>
    <string name="cancelled">Cancelled</string>
    <string name="delivery_is_underway">Delivery is underway</string>


    <string name="call_the_customer">Call the customer</string>
    <string name="order_Details">Order Details</string>
    <string name="customer_info">Customer info</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="payment_type">Payment Type</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="cancellation_reason">Cancellation Reason</string>


</resources>