<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anti_flash_white"
    android:fillViewport="true"
    tools:context=".feature_auth.presentation.register.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_50sdp">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="80dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/registration_btn_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_6sdp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/new_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/registration_btn_Back"
            app:layout_constraintEnd_toStartOf="@+id/registration_btn_Back"
            app:layout_constraintTop_toTopOf="@+id/registration_btn_Back" />

        <EditText
            android:id="@+id/registration_et_Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_shape"
            android:fontFamily="@font/cairo_regular"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop2" />

        <EditText
            android:id="@+id/registration_et_TaxRegistry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/et_shape"
            android:fontFamily="@font/cairo_regular"
            android:hint="@string/tax_registry_number"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/registration_et_Name" />

        <TextView
            android:id="@+id/registration_et_CommercialCopy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/et_shape"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:hint="@string/copy_of_the_commercial_register"
            android:maxLength="12"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:drawableEndCompat="@drawable/ic_attach"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/registration_et_TaxRegistry" />


        <EditText
            android:id="@+id/registration_et_PhoneNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/et_shape"
            android:fontFamily="@font/cairo_regular"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/registration_et_CommercialCopy" />

        <EditText
            android:id="@+id/registration_et_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/et_shape"
            android:fontFamily="@font/cairo_regular"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/registration_et_PhoneNum" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:hint=" "
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/registration_et_Email"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/registration_et_Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/et_shape"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/registration_et_PhoneNum" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:hint=" "
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/registration_et_RepeatedPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/et_shape"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/repeated_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/registration_et_PhoneNum" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/registration_chBox_Terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/ic_unchecked"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/registration_tv_Terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/i_agree_to_the_terms_of_use_and_communication"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/registration_chBox_Terms"
            app:layout_constraintStart_toEndOf="@+id/registration_chBox_Terms"
            app:layout_constraintTop_toTopOf="@+id/registration_chBox_Terms" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_btnLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/cairo_bold"
            android:stateListAnimator="@null"
            android:text="@string/new_registration"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/registration_tv_Terms" />

        <TextView
            android:id="@+id/registration_tv_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/already_have_an_account_log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>