<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvOrderBoard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_210sdp"
        android:layout_marginTop="@dimen/_11sdp"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/_3sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_14sdp">

            <TextView
                android:id="@+id/itemCanceled_tv_OrderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/lust"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/cancelled" />

            <TextView
                android:id="@+id/itemCanceled_tv_OrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_semibold"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/itemCanceled_tv_OrderStatus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/itemCanceled_tv_OrderStatus"
                android:text="@string/order_number" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@color/light_silver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemCanceled_tv_OrderNumber" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:src="@drawable/ic_location_grey"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:tint="@color/orange" />

            <TextView
                android:id="@+id/itemCanceled_tv_EndPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginStart="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8"
                tools:text="شارع 44 - السبتية - القاهره" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:src="@drawable/ic_clock"
                app:layout_constraintEnd_toEndOf="@+id/imageView8"
                app:layout_constraintStart_toStartOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <TextView
                android:id="@+id/itemCanceled_tv_Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginStart="@dimen/_6sdp"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="@+id/imageView9"
                tools:text="20/10/2021 ، 11:00ص" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9"
                android:text="@string/cost" />

            <TextView
                android:id="@+id/itemCanceled_tv_CostAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                android:text="@string/egp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/itemCanceled_btn_ShowDetails"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:backgroundTint="@color/bright_gray"
                android:fontFamily="@font/cairo_semibold"
                android:stateListAnimator="@null"
                android:text="@string/show_details"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>